*   Minor change
**  Major change

1.2-6 (12/15/2016)
  ** added a newly proposed screening rule, SSR-Slores, for logistic regression

1.2-5 (12/10/2016)
  *  updated README.md with benchmarking results
  *  added vignette

1.2-4 (11/14/2016)
  *  added gaussian.cpp: solve lasso without screening, for research only.
  *  added tests.

1.2-3 (11/13/2016)
  *  changed convergence criteria of logistic regression to be the same as that in glmnet.
  *  optimized source code; preparing for CRAN submission.
  *  fixed memory leaks occurred on Windows.

1.2-2 (10/27/2016)
  * added internal data set: the colon cancer data.

1.2-1 (10/18/2016)
  ** Implemented another new screening rule (SSR-BEDPP), also combining hybrid strong rule
     with a safe rule (BEDPP).
  ** implemented EDPP rule with active set cycling strategy for linear regression.
  *  changed convergence criteria to be the same as that in glmnet.

1.1-2 (9/1/2016)
  * fixed bugs occurred when some features have identical values for different 
    observations. These features are internally removed from model fitting.

1.1-1 (8/31/2016)
  ** Three sparse screening rules (SSR, EDPP, SSR-Dome) were implemented. Our 
     new proposed HSR-Dome combines HSR and Dome test for feature screening, 
     leading to even better performance as compared to 'glmnet'.	
  ** OpenMP parallel computing was added to speedup single model fitting.
  ** Both exact Newton and majorization-minimization (MM) algorithm for logistic
     regression were implemented. The latter could be faster, especially in 
     data-larger-than-RAM cases.
  ** Source code were rewritten in pure cpp.
  *  Sparse matrix representation was added using Armadillo library.

1.0-1 (3/1/2015)
  ** package ready for CRAN submission