@@ -1,6 +1,6 @@
 Package: biglasso
-Version: 1.2-5
-Date: 2016-12-10
+Version: 1.2-6
+Date: 2016-12-15
 Title: Big Lasso: Extending Lasso Model Fitting to Big Data in R
 Author: Yaohui Zeng [aut,cre], Patrick Breheny [ctb]
 Maintainer: Yaohui Zeng <yaohui-zeng@uiowa.edu>
